Fix game-data view responsiveness. Make tables align and more compact. Closes #10.

--- a/src/less/views/game-data.less
+++ b/src/less/views/game-data.less
@@ -1,4 +1,5 @@
 .game-data--user-role-title {
+    display: inline-block;
     span {
         color: #000;
         float: left;
